# 11-Autenticação/ExpAPI/backend/src/resources/usuario/usuario.controller.ts
@@ -1,21 +1,31 @@
-import { Usuario } from "@prisma/client";
 import { Request, Response } from "express";
-import { TipoUsuario } from "./usuario.types";
+import { CreateUsuarioDto, TipoUsuario } from "./usuario.types";
 import { ReasonPhrases, StatusCodes } from "http-status-codes";
 import { createUsuario } from "./usuario.service";
 
 const index = async (req: Request, res: Response) => {};
 
 const create = async (req: Request, res: Response) => {
-  const usuario = req.body as Usuario;
+  const usuario = req.body as CreateUsuarioDto;
   const tipoUsuario = req.query.tipoUsuario as TipoUsuario;
   try {
+    /*
+    #swagger.summary = 'Cria um usuário novo.'
+    #swagger.parameters['tipoUsuario'] = { description: 'ID do produto' }
+    #swagger.parameters['body'] = {
+    in: 'body',
+    schema: { $ref: '#/definitions/CreateUsuarioDto' }
+    }
+    #swagger.responses[200] = {
+    schema: { $ref: '#/definitions/Produto' }
+    }
+    */
     const novoUsuario = await createUsuario(usuario, tipoUsuario);
     res.status(StatusCodes.OK).json(novoUsuario);
   } catch (err) {
     res
       .status(StatusCodes.INTERNAL_SERVER_ERROR)
-      .json(ReasonPhrases.INTERNAL_SERVER_ERROR);
+      .json(err);
   }
 };
 
